ADD: prod deploy config