@@ -6,4 +6,4 @@ RUN mvn clean package -Dmaven.build.dir=/app/target/
 FROM openjdk:17-jdk-alpine
 WORKDIR /app
 COPY --from=build /app/target/app-1.0.0.jar /app/app.jar
-CMD ["java", "-jar", "/app/app.jar"]
+CMD ["java","--enable-preview", "-jar", "/app/app.jar"]
